--- a/templates/template.html
+++ b/templates/template.html
@@ -26,5 +26,8 @@
             {% for xij in xi.title %}<li>{{xij}}</li>{% endfor %}
         </ul>{% endfor %}
     {% endfor %}
+
+<a href="lib/lib/Lib_0_LIB.py">test</a>>
+
 </main>
 </html>
