--- a/templates/template.html
+++ b/templates/template.html
@@ -27,7 +27,7 @@
         </ul>{% endfor %}
     {% endfor %}
 
-<a href="lib/lib/Lib_0_LIB.py">test</a>>
+<a href="lib/lib/Lib_0_LIB.py" target="_blank">test</a>
 
 </main>
 </html>
