--- a/templates/template.html
+++ b/templates/template.html
@@ -27,7 +27,7 @@
         </ul>{% endfor %}
     {% endfor %}
 
-<a href="lib/lib/Lib_0_LIB.py" target="_blank">test</a>
+<a href="https://github.com/ibtosmlin/atcoder/blob/main/lib/lib/Lib_GD_%E6%9C%80%E5%A4%A7%E3%83%95%E3%83%AD%E3%83%BC_dinic.py" target="_blank">test</a>
 
 </main>
 </html>
