--- a/templates/template.html
+++ b/templates/template.html
@@ -22,8 +22,11 @@
 <main>
     {% for x in segments%}
     <section id="{{x[0]}}"><h2>{{x[1]}}</h2>
-        {% for xi in x[2] %}<ul><a href="https://github.com/ibtosmlin/atcoder/blob/main/lib/lib/{{xi.fname}}" target="_blank">{{xi.fname}}</a>
-            {% for xij in xi.title %}<li>{{xij}}</li>{% endfor %}
+        {% for xi in x[2] %}<ul>
+        <a href="https://github.com/ibtosmlin/atcoder/blob/main/lib/lib/{{xi.fname}}" target="_blank">{{xi.fname}}</a>
+            {% for xij in xi.title %}<li>
+                {{xij}}{{xi.subtitle}}
+            </li>{% endfor %}
         </ul>{% endfor %}
     {% endfor %}
     </section>
