--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,41 @@
 html,body {height: 100%;}
 body {
     margin: 10px;
-    padding: 0px;
+    padding: 10px;
     color: #c58026; /*全体の文字色*/
     font-family: "Kosugi Maru", sans-serif;
     font-size: 16px;        /*文字サイズ*/
-    line-height: 2;         /*行間*/
+    line-height: 1;         /*行間*/
     background: #f9f3ec;  /*背景色*/
     -webkit-text-size-adjust: none;
+}
+
+#pagetop {
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    margin: 0;
+}
+#pagetop a {
+    position: relative;
+    display: flex;
+    width: 65px;
+    height: 65px;
+    justify-content: center;
+    background: rgb(255 166 80);
+    transition: opacity .6s ease;
+    color: #FFF;
+    align-items: center;
+    text-decoration: none;
+    font-size: 32px;
+    border-radius: 100%;
+}
+#pagetop a:hover {
+    opacity: .3;
+}
+@media screen and (max-width:767px) {
+#pagetop a {
+    width: 45px;
+    height: 45px;
+}
 }
