--- a/templates/template.html
+++ b/templates/template.html
@@ -38,5 +38,6 @@
             </ul>
         </section>
     {% endfor %}
+<div id="pagetop"><a href="#top"><i class="fas fa-angle-up"></i></a></div>
 </main>
 </html>
