--- a/templates/template.html
+++ b/templates/template.html
@@ -45,7 +45,7 @@
         <ul>
         {% for x in memos%}
             <li>
-                <a href="https://github.com/ibtosmlin/atcoder/blob/main/lib/lib/{{x.fname}}" target="_blank"></a>
+                <a href="https://github.com/ibtosmlin/atcoder/blob/main/lib/lib/{{x.fname}}" target="_blank">{{x}}</a>
             </li>
         {% endfor %}
         </ul>
