--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,20 @@ footer {height: 10%; top: 100vh; position: sticky}
 a {
     color:green;
 }
+
+
+table{
+    width: 90%;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+table, th, td {
+    border:1px solid #333;
+  }
+#col0 {
+    width: 30%
+}
+#col1 {
+    width: 70%
+}
