--- a/css/style.css
+++ b/css/style.css
@@ -54,13 +54,59 @@ table{
     margin-right: 0px;
 }
 
-table, th, td {
-    border:1px solid #333;
-    border-collapse:collapse0;
-  }
+
 #col0 {
     width: 30%
 }
 #col1 {
     width: 70%
+}
+
+#tag {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 0.5px;
+}
+
+#tag li{
+    list-style: none;
+    margin: 1rem;
+    position: relative;
+}
+
+#tag li::before {
+    content: '/';
+    color: #f4a006;
+    padding: 0 3px;
+}
+#tag li::after {
+    content: '/';
+    color: #f4a006;
+    font-size: 18px;
+    padding: 0 3px;
+}
+
+#memo{
+    width: 30%
+}
+#col0 li, #memo li{
+    color: #2d8fdd;
+    border-left: solid 6px #2d8fdd;/*左側の線*/
+    background: #c8cbce;/*背景色*/
+    margin-bottom: 3px;/*下のバーとの余白*/
+    line-height: 1.5;
+    padding: 0.5em;
+    list-style-type: none!important;/*ポチ消す*/
+    border-top-right-radius: 15px ;
+    border-bottom-right-radius: 15px ;
+}
+
+#col1{
+    color: #333;
+    display: inline-block;
+    padding: 1rem 1rem;
+    margin: 1rem;
+    border-top: solid #333 1px;
+    border-bottom: solid #333 1px;
 }
