--- a/templates/template.html
+++ b/templates/template.html
@@ -12,7 +12,7 @@
 <header>
     <h1>競技プログラミングライブラリ</h1>
     <nav id="menubar">
-        <ul>
+        <ul id="tag">
             {% for x in segments%}
             <li><a href="#{{x[0]}}">{{x[1]}}</a></li>
             {% endfor %}
