--- a/templates/template.html
+++ b/templates/template.html
@@ -50,6 +50,9 @@
                 <a href="https://github.com/ibtosmlin/atcoder/blob/main/lib/lib/{{x}}" target="_blank">{{x}}</a>
             </li>
         {% endfor %}
+            <li>
+            <a href="https://github.com/not522/ac-library-python/blob/master/README_ja.md" target="_blank">atcoder lib</a>
+            </li>
         </ul>
     </section>
 </main>
