--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,10 @@ table{
 #memo{
     width: 30%
 }
-#col0 li, #memo li{
+#links{
+    width: 30%
+}
+#col0 li, #memo li, #links li{
     color: #2d8fdd;
     border-left: solid 6px #2d8fdd;/*左側の線*/
     background: #c8cbce;/*背景色*/
