--- a/templates/template.html
+++ b/templates/template.html
@@ -17,7 +17,7 @@
             <li><a href="#{{x[0]}}">{{x[1]}}</a></li>
             {% endfor %}
         </ul>
-        <ul id="tag2">
+        <ul id="tag">
             <li><a href="#link">リンク</a></li>
             <li><a href="#memo">メモ</a></li>
         </ul>
