--- a/templates/template.html
+++ b/templates/template.html
@@ -12,12 +12,12 @@
 <header>
     <h1>競技プログラミングライブラリ</h1>
     <nav id="menubar">
-        <ul id="tag">
+        <ul div="tag">
             {% for x in segments%}
             <li><a href="#{{x[0]}}">{{x[1]}}</a></li>
             {% endfor %}
         </ul>
-        <ul id="tag">
+        <ul div="tag">
             <li><a href="#link">リンク</a></li>
             <li><a href="#memo">メモ</a></li>
         </ul>
