--- a/css/style.css
+++ b/css/style.css
@@ -62,38 +62,36 @@ table{
     width: 70%
 }
 
-#tag {
+nav ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     padding: 0.5px;
 }
 
-#tag li{
+nav ul li{
     list-style: none;
     margin: 1rem;
     position: relative;
 }
 
-#tag li::before {
+nav ul li::before {
     content: '/';
     color: #f4a006;
     padding: 0 3px;
 }
-#tag li::after {
+nav ul li::after {
     content: '/';
     color: #f4a006;
     font-size: 18px;
     padding: 0 3px;
 }
 
-#memo{
+#memo, #link{
     width: 30%
 }
-#links{
-    width: 30%
-}
-#col0 li, #memo li, #links li{
+
+#col0 li, #memo li, #link li{
     color: #2d8fdd;
     border-left: solid 6px #2d8fdd;/*左側の線*/
     background: #c8cbce;/*背景色*/
